# geomcomp_project_1

./: CMakeLists.txt  README.md  actual_program.cpp  actual_program.h  algqueue.cpp  algqueue.h  camera.cpp  camera.h  engine.cpp  engine.h  input.txt  main.cpp  point.cpp  point.h
